--- a/.gitignore
+++ b/.gitignore
@@ -134,5 +134,5 @@ app.*.map.json
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
 
-Firebase related
-.firebase
+# Firebase related
+.firebasea
