--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -13,6 +13,7 @@ on:
 
 jobs:
   sync-crowdin:
+    if: github.repository_owner == 'revanced'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
