--- a/.github/workflows/analyser.yml
+++ b/.github/workflows/analyser.yml
@@ -2,9 +2,11 @@ name: 🤖 Analyse Task Force
 
 on:
   push:
-    branches: [ "dev" ]
+    paths: 
+      - "**.dart"
   pull_request:
-    branches: [ "dev" ]
+    paths: 
+      - "**.dart"
 
 jobs:
   build:
