--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   flutter_markdown: ^0.6.14
   pub_release: ^8.0.3
   dio_cache_interceptor: ^3.4.0
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   json_serializable: ^6.6.1
