--- a/.github/workflows/unified.yml
+++ b/.github/workflows/unified.yml
@@ -3,7 +3,10 @@ name: Unified workflow
 
 on:
   pull_request:
+    branches: [ "*" ]
   push:
+    branches: [ "*" ]
+    
 
 jobs:
   #gradle-verification:
