ci(unified): actually on all branches

--- a/.github/workflows/unified.yml
+++ b/.github/workflows/unified.yml
@@ -3,9 +3,9 @@ name: Unified workflow
 
 on:
   pull_request:
-    branches: [ "*" ]
+    branches: [ "**" ]
   push:
-    branches: [ "*" ]
+    branches: [ "**" ]
     
 
 jobs:
