--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -42,6 +42,7 @@ jobs:
         run: |
           gh repo clone validcube/revanced-manager
           cd revanced-manager
+          gh repo set-default validcube/revanced-manager
           gh pr checkout ${{ inputs.pr-number }}
       - name: Checkout
         uses: actions/checkout@v4
