--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -40,19 +40,16 @@ jobs:
         env: 
           GH_TOKEN: ${{ github.token }}
         run: |
-          gh repo clone ReVanced/revanced-manager
+          gh repo clone validcube/revanced-manager
           cd revanced-manager
-          gh repo set-default ReVanced/revanced-manager
+          gh repo set-default validcube/revanced-manager
           gh pr checkout ${{ inputs.pr-number }}
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          persist-credentials: false
       - name: Setup JDK
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'zulu'
+          cache: gradle
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -84,10 +81,10 @@ jobs:
       - name: Set env
         run: |
           echo "DATETIME=$(date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
-          if [[ "${{ needs.build.result }}" == "success" ]]; then
-            echo "MESSAGE=✅ Build succeeded!" >> $GITHUB_ENV
-          else
+          if [[ "${{ needs.build.result }}" == "failure" ]]; then
             echo "MESSAGE=🚫 Build failed!" >> $GITHUB_ENV
+          else
+            echo "MESSAGE=✅ Build succeeded!" >> $GITHUB_ENV
           fi
       - name: "Comment to Pull Request #${{ inputs.pr-number }}"
         uses: thollander/actions-comment-pull-request@v2
@@ -98,7 +95,7 @@ jobs:
           message: |
             ${{ env.MESSAGE }} @ ${{ env.DATETIME }}
             
-            You can check the details [here](${{ github.event.pull_request.html_url }}).
+            You can check the details [here](${{ github.event.workflow_run.html_url }}).
   
             - PR: ${{ inputs.pr-number }}
             - App variant: ${{ inputs.app-variant }}
