--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -31,7 +31,7 @@ on:
         description: PR number (No hashtag)
         required: true
 
-run-name: "Build PR ${{ inputs.pr-number }} with "
+run-name: "Build PR ${{ inputs.pr-number }}"
         
 jobs:
   build:
@@ -115,6 +115,7 @@ jobs:
       - name: Upload build
         uses: actions/upload-artifact@v3
         with:
+          error: true
           name: revanced-manager-(${{ env.COMMIT_HASH }}-${{ inputs.pr-number }}-${{ inputs.app-flavour }})-${{ inputs.flutter-branch }}
           path: | 
             build/app/outputs/flutter-apk/app-${{ inputs.app-flavour }}.apk
